exports[`test generate a mutation file 1`] = `
"// @flow

import {
  GraphQLString,
  GraphQLNonNull,
} from \'graphql\';
import {
  mutationWithClientMutationId,
  toGlobalId,
} from \'graphql-relay\';

import Example from \'../model/Example\';

import ExampleLoader from \'../loader/ExampleLoader\';
import ExampleConnection from \'../connection/ExampleConnection\';

export default mutationWithClientMutationId({
  name: \'ExampleAdd\',
  inputFields: {
    example: {
      type: new GraphQLNonNull(GraphQLString),
      description: \'My example field\',
    },
  },
  mutateAndGetPayload: async ({ example }, { user }) => {
    // Verify if user is authorized
    if (!user) {
      throw new Error(\'Unauthorized user\');
    }

    // TODO: mutation logic

    return {
      // id: id, // ID of the newly created row
      error: null,
    };
  },
  outputFields: {
    exampleEdge: {
      type: ExampleConnection.edgeType,
      resolve: async({ id }, args, { user }) => {
        // TODO: load new edge from loader

        const example = await ExampleLoader.load(
          user, id,
        );

        // Returns null if no node was loaded
        if (!example) {
          return null;
        }

        return {
          cursor: toGlobalId(\'example\', example),
          node: example,
        };
      },
    },
    error: {
      type: GraphQLString,
      resolve: ({ error }) => error,
    },
  },
});
"
`;

exports[`test generate a mutation file 2`] = `
"// @flow

import {
  GraphQLID,
  GraphQLString,
  GraphQLNonNull,
} from \'graphql\';
import {
  mutationWithClientMutationId,
  fromGlobalId,
} from \'graphql-relay\';

import Example from \'../model/Example\';

import ExampleType from \'../type/ExampleType\';
import ExampleLoader from \'../loader/ExampleLoader\';

export default mutationWithClientMutationId({
  name: \'ExampleEdit\',
  inputFields: {
    id: {
      type: new GraphQLNonNull(GraphQLID),
    },
    example: {
      type: GraphQLString,
    },
  },
  mutateAndGetPayload: async (args, { user }) => {
    // Verify if user is authorized
    if (!user) {
      throw new Error(\'Unauthorized user\');
    }

    const {
      id,
      example,
    } = args;

    // Check if the provided ID is valid
    const example = await Example.findOne({
      _id: fromGlobalId(id).id,
    });

    // If not, throw an error
    if (!example) {
      throw new Error(\'Invalid exampleId\');
    }

    // TODO: mutation logic

    // Clear dataloader cache
    ExampleLoader.clearCache(example._id);

    return {
      id: example._id,
      error: null,
    };
  },
  outputFields: {
    example: {
      type: ExampleType,
      resolve: (obj, args, { user }) => ExampleLoader.load(user, obj.id),
    },
    error: {
      type: GraphQLString,
      resolve: ({ error }) => error,
    },
  },
});
"
`;
